# nicegui-azure-entra-auth

./: .bumpversion.cfg  .coveragerc  .env.template  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.project_template/: cookiecutter.json  cookiecutter_replay.json  update_project_template.py
Taskfiles/: docker_pypy_tasks.yml  docker_tasks.yml  docker_venv_tasks.yml
docker/: Dockerfile  pypy_Dockerfile  venv_Dockerfile
docs/: configuring_artifact_repositories.md  prerequisites_installation_instructions.md  project_installation_instructions.md  project_tools.md
nicegui_azure_entra_auth/: __init__.py  minimal_nicegui_entra_auth_example.py
notebooks/: notebook_template.ipynb
tests/: test_nicegui_azure_entra_auth.py
